--- a/package.json
+++ b/package.json
@@ -9,10 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.12",
+    "@react-navigation/native-stack": "^6.8.0",
+    "@react-navigation/stack": "^6.2.3",
+    "@reduxjs/toolkit": "^1.8.5",
+    "babel-preset-react-native": "^4.0.1",
     "expo": "~46.0.9",
     "expo-status-bar": "~1.4.0",
+    "intl": "^1.2.5",
     "react": "18.0.0",
-    "react-native": "0.69.5"
+    "react-intl-number-format": "^1.1.1",
+    "react-native": "0.69.5",
+    "react-native-dotenv": "^3.3.1",
+    "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "^2.6.0",
+    "react-native-google-places-autocomplete": "^2.4.1",
+    "react-native-maps": "0.31.1",
+    "react-native-maps-directions": "^1.9.0",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-vector-icons": "^9.2.0",
+    "react-redux": "^8.0.2",
+    "tailwind-react-native-classnames": "^1.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
